# Pelagia

./: .gitignore  Pelagia.code-workspace  README.md  kvstore.py  pyproject.toml  requirements-dev.txt  requirements-ml-apple-metal.txt  requirements-ml.txt  requirements-worker-cpu.txt  requirements.txt
Pelagia/: Frame.py  __init__.py  config.py  db.py  default.config.toml  domain.py  observability.py  util.py  version.py
Pelagia/api/: app.py  auth.py  schemas.py
Pelagia/api/routes/: _common.py  _images.py  assets.py  auth.py  collections.py  detections.py  frame.py  health.py  ingestion.py  io.py  jobs.py  kvstore.py  live.py  live_preview.py  live_sandbox.py  logs.py  models.py  processing.py  processing_status.py  roi_refinement.py  runs.py  segmentation.py  system.py  workers.py
Pelagia/assets/: README.md
Pelagia/assets/models/: README.md
Pelagia/assets/models/roi_refinement/example_model/: metadata.toml  model_summary.txt
Pelagia/assets/plugins/: README.md  metadata.example.toml
Pelagia/assets/schemas/: README.md
Pelagia/cli/: __init__.py  app.py  environments.py
Pelagia/cli/commands/: __init__.py  kvstore.py  workers.py
Pelagia/processing/: __init__.py  _logging.py  capabilities.py  classification.py  codec_registry.py  defaults.py  detection_candidate.py  detection_recording.py  detection_refinement.py  frame_codec.py  frame_correction.py  frame_model.py  frame_preprocess.py  frame_store.py  frame_threshold.py  frame_time.py  frames.py  ingest.py  ingest_analysis.py  ingest_background.py  mask_augmentation.py  model_archive.py  model_exports.py  oracle_unet_refiner.py  pipelines.py  roi_assembly.py  roi_filter.py  segmentation.py  segmentation_options.py  thumbhash.py  timing.py  video_ingest.py
Pelagia/services/: __init__.py  assets.py  context.py  io_exports.py  job_commands.py  jobs.py  models.py  pipeline.py  processing_queue.py  processing_status.py  project_settings.py  projects.py  runs.py  stores.py  system_usage.py
Pelagia/storage/: __init__.py  blob_store.py  kvstore.py  kvstore2.py  postgres.py  scoped.py
Pelagia/storage/sql/: schema.sql
Pelagia/storage/sql/migrations/: 0001_processing_status.sql  0002_projectless_admin_sessions.sql  0003_processing_status_summary_indexes.sql  0004_frame_flatfield_profiles.sql
Pelagia/utils/: __init__.py  serialization.py  validation.py
Pelagia/workers/: __init__.py  common.py  handlers.py  progress.py  registry.py  runtime.py  worker.py
Pelagia/workers/stages/: __init__.py  background.py  extract.py  preprocess.py  refinement.py  segmentation.py
docs/: artifacts.md  backup.md  end-user-support.md  job-commands.md  migration.md  processing-status.md  python-environment.md  reset-system.md
pelagia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
reports/: pelagia-benchmark - ZSTD.json  pelagia-benchmark.json
scripts/: compare_jpg_quality.py  pelagia_benchmark_report.py  pelagia_dev_stack.sh  pelagia_env  pelagia_env.py  pelagia_stack_from_toml.sh  pelagia_workers.example.toml  pelagia_workers.toml
tests/: test_api.py  test_cli_auth.py  test_config.py  test_domain.py  test_environment_bootstrap.py  test_frames.py  test_ingest_background.py  test_job_commands.py  test_kvstore.py  test_kvstore2.py  test_model_artifacts.py  test_oracle_unet_refiner.py  test_postgres.py  test_processing_queue.py  test_project_isolation.py  test_project_settings.py  test_segmentation.py  test_system_usage.py  test_thumbhash.py  test_timing.py  test_worker_stack.py  test_workers.py
