[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pelagia"
version = "0.0.1"
description = "Integrated image processing, storage, API, CLI, and worker tools."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "tomli; python_version < '3.11'",
    "thumbhash>=0.1.2",
    "zstandard",
]

[project.optional-dependencies]
api = ["fastapi", "uvicorn"]
cli = ["typer"]
postgres = ["psycopg[binary]"]
kvstore-blake3 = ["blake3"]
ml = [
    "tensorflow[and-cuda]; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "tensorflow; platform_system != 'Linux' or platform_machine != 'x86_64'",
    "keras",
]
ml-apple-metal = [
    "tensorflow>=2.18,<2.19; platform_system == 'Darwin'",
    "tensorflow-metal>=1.2,<1.3; platform_system == 'Darwin'",
    "keras; platform_system == 'Darwin'",
]
test = ["pytest"]

[project.scripts]
pelagia = "Pelagia.cli.app:main"

[tool.setuptools.packages.find]
include = ["Pelagia*"]

[tool.setuptools.package-data]
"Pelagia" = [
    "default.config.toml",
    "assets/**/*",
]
"Pelagia.storage" = ["sql/*.sql"]

[tool.setuptools.exclude-package-data]
"Pelagia" = [
    "assets/**/.DS_Store",
]
