[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pelagia"
version = "0.0.1"
description = "Integrated image processing, storage, API, CLI, and worker tools."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "tomli; python_version < '3.11'",
    "thumbhash>=0.1.2",
    "zstandard",
]

[project.optional-dependencies]
api = ["fastapi", "uvicorn"]
cli = ["typer"]
postgres = ["psycopg[binary]"]
kvstore-blake3 = ["blake3"]
worker-cpu = [
    "imagecodecs==2026.6.26",
    "numpy>=2.1,<2.6",
]
ml = [
    "tensorflow[and-cuda]>=2.21,<2.22; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "tensorflow>=2.21,<2.22; platform_system != 'Linux' or platform_machine != 'x86_64'",
    "keras>=3.12,<3.15",
    "imagecodecs==2026.6.26",
    "numpy>=2.1,<2.6",
]
ml-apple-metal = [
    "tensorflow>=2.18,<2.19; platform_system == 'Darwin'",
    "tensorflow-metal>=1.2,<1.3; platform_system == 'Darwin'",
    "keras>=3.5,<3.15; platform_system == 'Darwin'",
    "imagecodecs==2026.3.6; platform_system == 'Darwin'",
    "numpy>=2.0,<2.1; platform_system == 'Darwin'",
]
test = ["pytest"]

[project.scripts]
pelagia = "Pelagia.cli.app:main"

[tool.setuptools.packages.find]
include = ["Pelagia*"]

[tool.setuptools.package-data]
"Pelagia" = [
    "default.config.toml",
    "assets/**/*",
]
"Pelagia.storage" = ["sql/*.sql"]

[tool.setuptools.exclude-package-data]
"Pelagia" = [
    "assets/**/.DS_Store",
]
